<resources>
    <string name="app_name">INSOPTAndroidPractice</string>
    <string name="login_info_sp">LoginSp</string>
    <string name="sign_id_tv">ID</string>
    <string name="sign_name_tv">Name</string>
    <string name="sign_pw_tv">Password</string>
    <string name="signin_login_btn">Login</string>
    <string name="signup_login_success">회원가입 성공</string>
    <string name="signup_login_fail">회원가입 실패</string>
    <string name="signup_fail_name">이름은 2글자 이상이어야 합니다.</string>
    <string name="signup_fail_id">아이디는 영문, 숫자 포함 6~10자 이내로 입력해주세요!</string>
    <string name="signup_fail_pw_length">비밀번호는 영문,숫자,특수문자 포함 8글자~12글자 이내로 입력해주세요!</string>
    <string name="signup_fail_input">올바른 정보를 입력해주세요!</string>
    <string name="signup_name_hint">2글자 이상</string>
    <string name="signup_id_hint">영문,숫자 포함 6~10글자</string>
    <string name="signup_pw_hint">영문,숫자,특수문자 포함 6~12글자</string>

    <string name="signin_signup_btn">SIGNUP</string>
    <string name="signin_title_tv">Welcome to SOPT</string>
    <string name="signin_fail_id_or_pw">ID 또는 PW를 확인해주세요!</string>
    <string name="signin_empty_id_or_pw">ID 또는 PW를 확인해주세요!</string>
    <string name="signup_title_tv">SIGNUP</string>
    <string name="signup_mbti_tv">MBTI</string>
    <string name="signup_complete_btn">회원가입 완료</string>
    <string name="signin_success_signup">회원가입 완료!</string>
    <string name="signin_fail_signup">회원가입이 취소되었습니다.</string>
    <string name="home_id_tv">ID: </string>
    <string name="home_mbti_tv">MBTI: </string>
    <string name="home_user_name">이름: 박지훈</string>
    <string name="signup_mbti_desc1">(선택)</string>
    <string name="signup_pw_desc1">(필수)</string>
    <string name="signup_id_desc1">(필수)</string>
    <string name="home_logout">Logout</string>
    <string name="signin_auto_login_complete">자동 로그인 되었습니다.</string>
    <string name="signin_login_success">로그인에 성공했습니다</string>
    <string name="signin_login_fail">로그인 실패</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btm_menu_home">홈</string>
    <string name="btm_menu_music">음악</string>
    <string name="btm_menu_gallery">갤러리</string>
    <string name="btm_menu_search">검색</string>
    <string name="home_repo_add_btn">Add Repo</string>
    <string name="home_repo_remove_btn">Remove Repo</string>
    <string name="gallery_remove_btn">Remove</string>
    <string name="home_desc_tv">자기소개: 98년생 안드로이드 개발자입니다. 반갑습니다😁</string>
    <string name="dialog_add_music_title_input">노래 제목을 입력해주세요!</string>
    <string name="dialog_add_music_singer_input">가수 이름을 입력해주세요!</string>
    <string name="dialog_add_confirm">확인</string>
    <string name="dialog_add_cancel">취소</string>
    <string name="fail_to_upload_music">음악을 생성하지 못했습니다.</string>
    <string name="success_to_upload_music">음악을 생성 성공!.</string>

</resources>