<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btm_home_menu"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/btm_btn_home"
        android:title="@string/btm_menu_home"/>
    <item
        android:id="@+id/btm_music_menu"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_library_music_24"
        android:title="@string/btm_menu_music"/>
    <item
        android:id="@+id/btm_search_menu"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/btm_btn_search"
        android:title="@string/btm_menu_search"/>
</menu>