<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="dialog"
            type="org.sopt.sample.presentation.music.dialog.MusicAddDialog" />

        <variable
            name="viewModel"
            type="org.sopt.sample.presentation.music.MusicViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_border">

        <ImageView
            android:id="@+id/dialog_img_iv"
            android:layout_width="90dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_add_photo_alternate_24"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_input_layout_title"
            style="@style/dialog_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_img_iv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_input_et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_add_music_title_input"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.title}"
                android:textColor="@color/black"
                android:textCursorDrawable="@color/dialog_et_cursor"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_input_layout_singer"
            style="@style/dialog_input_layout"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@id/dialog_input_layout_title"
            app:layout_constraintStart_toStartOf="@id/dialog_input_layout_title"
            app:layout_constraintTop_toBottomOf="@id/dialog_input_layout_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_input_et_singer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_add_music_singer_input"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.singer}"
                android:textColor="@color/black"
                android:textCursorDrawable="@color/dialog_et_cursor"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/dialog_btn_flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="50dp"
            app:constraint_referenced_ids="dialog_confirm_btn,dialog_cancel_btn"
            app:flow_horizontalGap="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_input_layout_singer" />

        <Button
            android:id="@+id/dialog_confirm_btn"
            android:layout_width="140dp"
            android:layout_height="0dp"
            android:background="@drawable/dialog_btn_selector"
            android:enabled="false"
            android:onClick="@{()->viewModel.uploadMusic()}"
            android:text="@string/dialog_add_confirm"
            android:textAppearance="@style/dialog_btn_text"
            app:layout_constraintDimensionRatio="5:1.7" />

        <Button
            android:id="@+id/dialog_cancel_btn"
            android:layout_width="140dp"
            android:layout_height="0dp"
            android:background="@drawable/dialog_btn_selector"
            android:gravity="center"
            android:onClick="@{()->dialog.dismissDialog()}"
            android:text="@string/dialog_add_cancel"
            android:textAppearance="@style/dialog_btn_text"
            app:layout_constraintDimensionRatio="5:1.7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>